ReCaptcha: use ProcessBuilder instead of runtime exec.